
Version 2.12.24 (unreleased)

** libgnutls: Fix in TLS server hello parsing (GNUTLS-SA-2014-3)

** libgnutls: Fix in TLS record decoding (GNUTLS-SA-2013-2)

** libgnutls: Fix in certificate verification (GNUTLS-SA-2014-1,
   GNUTLS-SA-2014-2, GNUTLS-SA-2015-1)

** libgnutls: Fix for MD5 downgrade in TLS 1.2 signatures. Reported by
   Karthikeyan Bhargavan (GNUTLS-SA-2015-2).

** libgnutls: No longer set SSL 3.0 as the record layer version by default
   This improves interoperability against broken servers which
   assume that this version is supported by the client.

** API and ABI modifications:
No changes since last version.


Version 2.12.23 (released 2012-02-04)

** libgnutls: Eliminated memory leak in PCKS #11 initialization.
Report and fix by Sam Varshavchik.

** libgnutls: Fixes in record padding parsing to prevent a timing attack. 
Issue reported by Kenny Patterson and Nadhem Alfardan.

** libgnutls: DN variable 'T' was expanded to 'title'.

** API and ABI modifications:
No changes since last version.


Version 2.12.22 (released 2013-01-05)

** libgnutls: Stricter RSA PKCS #1 1.5 encoding and decoding. Reported
by Kikuchi Masashi.

** libgnutls: Fixed record padding parsing issue. Reported by Kenny
Patterson and Nadhem Alfardan.

** libgnutls: gnutls_x509_privkey_import_pkcs8() will accept a 
NULL password.

** libgnutls: Updated gnulib

** API and ABI modifications:
No changes since last version.


Version 2.12.21 (released 2012-11-08)

** libgnutls: Backported patch to compile with libtasn1 3.0.
Minimum libtasn1 dependency is now 2.14.

** libgnutls: Always tolerate key usage violation errors from the side
of the peer, but also notify via an audit message.

** libgnutls: Allow a NULL password to be specified in 
gnutls_x509_privkey_import_pkcs8().

** minitasn1: Upgraded to libtasn1 version 3.0.

** API and ABI modifications:
No changes since last version.


Version 2.12.20 (released 2012-06-10)

** libgnutls: Fixed memory leak in PKCS #8 key import.
