@@ -15,6 +15,11 @@ Version 2.12.24 (unreleased)
 ** libgnutls: Fix for MD5 downgrade in TLS 1.2 signatures. Reported by
    Karthikeyan Bhargavan (GNUTLS-SA-2015-2).
 
+** libgnutls: Be less strict in TLS 1.2 signature algorithm adherence.
+   That is because we only support SHA1 and SHA256 for handshake hashes,
+   and if we only accept these two algorithms, we will fail to connect to
+   sites which use other hash algorithms on their certificates.
+
 ** libgnutls: No longer set SSL 3.0 as the record layer version by default
    This improves interoperability against broken servers which
    assume that this version is supported by the client.
